--- a/perfomance/styles.css
+++ b/perfomance/styles.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: 80px 1fr 80px;
+  row-gap: 70px;
 
   margin: 0 auto;
   max-width: 1240px;
@@ -41,6 +42,7 @@
 
 .nav-list {
   display: flex;
+  flex-wrap: wrap;
   gap: 30px;
 
   justify-self: end;
@@ -48,4 +50,42 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 150%;
+}
+
+.article {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(6, auto);
+  gap: 70px 50px;
+}
+
+.article-top {
+  grid-column: 1/-1;
+  grid-row: 1/3;
+
+  max-width: 100%;
+}
+
+.article-figure-wide {
+  grid-column: span 2;
+}
+
+.main-title {
+  max-width: 880px;
+  margin: auto;
+
+  font-size: 46px;
+  font-weight: normal;
+  line-height: 1.5;
+  text-align: center;
+}
+
+.article-meta {
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+.article-figcaption {
+  font-size: 16px;
+  line-height: 1.5;
 }
