--- a/perfomance/styles.css
+++ b/perfomance/styles.css
@@ -59,11 +59,18 @@
   gap: 70px 50px;
 }
 
+.article-figure,
+p {
+  margin: 0;
+}
+
 .article-top {
   grid-column: 1/-1;
   grid-row: 1/3;
 
-  max-width: 100%;
+  display: grid;
+  align-items: center;
+  gap: 30px;
 }
 
 .article-figure-wide {
@@ -71,7 +78,7 @@
 }
 
 .main-title {
-  max-width: 880px;
+  max-width: 75%;
   margin: auto;
 
   font-size: 46px;
@@ -81,6 +88,11 @@
 }
 
 .article-meta {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-column-gap: 50px;
+  justify-content: center;
+
   font-size: 18px;
   line-height: 1.5;
 }
@@ -88,4 +100,35 @@
 .article-figcaption {
   font-size: 16px;
   line-height: 1.5;
+}
+
+.article-figcaption p:first-of-type {
+  margin-bottom: 5px;
+}
+
+.article-img--big {
+  max-width: 100%;
+  height: auto;
+
+  margin-top: 20px;
+}
+
+.article-figure-column {
+  grid-column: 2/-1;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 50px;
+}
+
+.article-text {
+  font-size: 18px;
+  font-style: normal;
+  line-height: 150%;
+}
+
+.article-figure:not(.article-figure-column) {
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+  grid-row-gap: 30px;
 }
