--- a/floral-boutique/style.css
+++ b/floral-boutique/style.css
@@ -62,6 +62,10 @@
 }
 
 .wrapper {
+  display: grid;
+  grid-template-rows: [header] auto [main] 1fr [footer] auto;
+  min-height: 100vh;
+
   max-width: 1440px;
   margin: auto;
   padding: 0 100px;
@@ -124,4 +128,103 @@
   to {
     top: -8px;
   }
+}
+
+.main {
+  display: grid;
+  grid-template-rows: 350px 60px 1fr 70px;
+  gap: 50px;
+}
+
+.custom-select {
+  position: relative;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  width: 100%;
+  padding: 18px;
+
+  border: var(--btn) solid 1px;
+  border-radius: 10px;
+}
+
+.custom-select::before {
+  content: '';
+  position: absolute;
+  right: 18px;
+  top: calc(50% - 4px);
+
+  width: 16px;
+  height: 8px;
+
+  background: url('./assets/icons/down.png') no-repeat center;
+}
+
+.custom-select:hover {
+  background-color: var(--cards);
+  cursor: pointer;
+}
+
+.custom-select select {
+  display: none;
+}
+
+.filter {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 50px;
+}
+
+.select-selected {
+  background-color: DodgerBlue;
+}
+
+/* Style the arrow inside the select element: */
+.select-selected:after {
+  position: absolute;
+  content: '';
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+}
+
+/* Point the arrow upwards when the select box is open (active): */
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
+}
+
+/* style the items (options), including the selected item: */
+.select-items div,
+.select-selected {
+  color: #ffffff;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+}
+
+/* Style items (options): */
+.select-items {
+  position: absolute;
+  background-color: DodgerBlue;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
+
+/* Hide the items when the select box is closed: */
+.select-hide {
+  display: none;
+}
+
+.select-items div:hover,
+.same-as-selected {
+  background-color: rgba(0, 0, 0, 0.1);
 }
