--- a/floral-boutique/style.css
+++ b/floral-boutique/style.css
@@ -139,9 +139,9 @@
   margin-bottom: 80px;
 }
 
-.custom-select {
+.filter-item {
   position: relative;
-
+  appearance: none;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -153,9 +153,14 @@
   border-radius: 10px;
 }
 
-.custom-select::before {
+.select-wrapper {
+  position: relative;
+}
+
+.select-wrapper::before {
   content: '';
   position: absolute;
+  z-index: 2;
   right: 18px;
   top: calc(50% - 4px);
 
@@ -165,13 +170,9 @@
   background: url('./assets/icons/down.png') no-repeat center;
 }
 
-.custom-select:hover {
+.filter-item:hover {
   background-color: var(--cards);
   cursor: pointer;
-}
-
-.custom-select select {
-  display: none;
 }
 
 .filter {
@@ -183,35 +184,6 @@
 .select-selected {
   background-color: DodgerBlue;
 }
-
-/* style the items (options), including the selected item: 
-.select-items div,
-.select-selected {
-  color: #ffffff;
-  padding: 8px 16px;
-  border: 1px solid transparent;
-  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-  cursor: pointer;
-}
-
-.select-items {
-  position: absolute;
-  background-color: DodgerBlue;
-  top: 100%;
-  left: 0;
-  right: 0;
-  z-index: 99;
-}
-
-.select-hide {
-  display: none;
-}
-
-.select-items div:hover,
-.same-as-selected {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-*/
 
 .cards {
   display: grid;
